CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Include our generic module with all macros
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
INCLUDE(common)

# Define useful variables
SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH 0)
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET(VERSION_RC "${VERSION_MAJOR},${VERSION_MINOR},${VERSION_PATCH},0")
SET(AUTHOR "Garou & Kervala")
SET(PRODUCT "CeB")
SET(DESCRIPTION "A <Mtp> Chat! Client written in C++/Qt4")
SET(TARGET "ceb")
SET(YEAR "2006-2011")

PROJECT(${PRODUCT} CXX C)

SETUP_BUILD()
SETUP_BUILD_FLAGS()

SETUP_DEFAULT_OPTIONS()

SETUP_PREFIX_PATHS(${TARGET})
GEN_CONFIG_H()

SETUP_EXTERNAL()

FIND_PACKAGE(Qt4 COMPONENTS QtMain QtCore QtGui QtNetwork QtXml REQUIRED)

INCLUDE_DIRECTORIES(${QT_INCLUDES} ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/max/include)
INCLUDE(${QT_USE_FILE})

ADD_SUBDIRECTORY(max)
ADD_SUBDIRECTORY(ceb)
