CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Include our generic module with all macros
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
INCLUDE(common)

# Define useful variables
SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 1)
SET(VERSION_PATCH 1)
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET(VERSION_RC "${VERSION_MAJOR},${VERSION_MINOR},${VERSION_PATCH},0")
SET(AUTHOR "MeltingPot")
SET(PRODUCT "CeB")
SET(DESCRIPTION "A Mtp Chat! Client written in C++/Qt4")
IF(PLUGIN)
	SET(TARGET "cebplugin")
ELSE(PLUGIN)
	SET(TARGET "ceb")
ENDIF(PLUGIN)
SET(TARGET_ICON "ceb.ico")
SET(YEAR "2006-2012")

PROJECT(${PRODUCT} CXX C)

INIT_DEFAULT_OPTIONS()

OPTION(WITH_RYZOM "Use Ryzom configuration files" OFF)

# Qt doesn't use RTTI or C++ exceptions
SET_OPTION_DEFAULT(WITH_EXCEPTIONS OFF)
SET_OPTION_DEFAULT(WITH_RTTI OFF)

SETUP_DEFAULT_OPTIONS()

INIT_BUILD_FLAGS()
SETUP_BUILD_FLAGS()

SETUP_PREFIX_PATHS(${TARGET})
GEN_CONFIG_H()

SETUP_EXTERNAL()

FIND_PACKAGE(Qt4 COMPONENTS QtMain QtCore QtGui QtNetwork QtXml QtSvg REQUIRED)

INCLUDE_DIRECTORIES(${QT_INCLUDES} ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/max/include)
INCLUDE(${QT_USE_FILE})

ADD_SUBDIRECTORY(max)
ADD_SUBDIRECTORY(ceb)
