SET(TARGET "max")
SET(PRODUCT "MAX")

FILE(GLOB HEADER include/*.h)
FILE(GLOB SRC src/*.cpp)

# Generate .cxx from .h
QT4_WRAP_CPP(MOC_SRC ${HEADER})

SOURCE_GROUP("generated" FILES ${MOC_SRC})
SOURCE_GROUP("include" FILES ${HEADER})
SOURCE_GROUP("src" FILES ${SRC})

SET_TARGET_LIB(${TARGET} ${SRC} ${MOC_SRC} ${HEADER})
TARGET_LINK_LIBRARIES(${TARGET} ${QT_LIBRARIES})

ADD_DEFINITIONS(${QT_DEFINITIONS})

IF(WITH_PCH)
  ADD_NATIVE_PRECOMPILED_HEADER(${TARGET} ${CMAKE_CURRENT_SOURCE_DIR}/src/common.h ${CMAKE_CURRENT_SOURCE_DIR}/src/common.cpp)
ENDIF(WITH_PCH)
